refatoração inventario